--- a/web/css/akomaNtoso30-override.css
+++ b/web/css/akomaNtoso30-override.css
@@ -47,7 +47,7 @@
 
 .chapter[ns="http://docs.oasis-open.org/legaldocml/ns/akn/3.0/CSD02"] {
     display: block;
-    width: 100%;
+    width: 98%;
 }
 
 
@@ -65,7 +65,7 @@
 
 .article[ns="http://docs.oasis-open.org/legaldocml/ns/akn/3.0/CSD02"] {
     display: block;
-    width: 100%;
+    width: 98%;
 }
 
 .article[ns="http://docs.oasis-open.org/legaldocml/ns/akn/3.0/CSD02"] *[ns="http://docs.oasis-open.org/legaldocml/ns/akn/3.0/CSD02"] {
